--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   </head>
   <body>
     <!-- TODO: Write your code here -->
+      A: <input id="a-side" type="number">
+      B: <input id="b-side" type="number">
+      C: <input id="c-side" type="number">
+
+      <button id="calculate">Calculate</button>
+
+      <div id="result">
+        <div>Type: <span id="message"></span></div>
+        <div>Perimeter: <span id="perimeter"></span></div>
+        <div>Area: <span id="area"></span></div>
+        <div>
+          <ul>
+            <li>Angle A: <span id="angle-a"></span></li>
+            <li>Angle B: <span id="angle-b"></span></li>
+            <li>Angle C: <span id="angle-c"></span></li>
+          </ul>
+        </div>
+      </div>
 
 
 
